# dta_abrechnung

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20260413_0001_persistence_foundation.py  20260413_0002_align_postgres_audit_function.py
docs/: README.md  api-and-cloud.md  architecture.md  coding-standards.md  contributor-guide.md  current-status.md  domain-model.md  end-user-manual.md  getting-started.md  persistence-and-security.md  procedures-and-transports.md  redundancy-and-dr.md
src/dta_abrechnung/: __init__.py  accounting.py  billing.py  care_ops.py  domain.py  evidence.py  inbound.py  masterdata.py  planning.py  platform.py  procedures.py  runtime.py  security.py  storage.py  store.py  transport.py
src/dta_abrechnung/api/: __init__.py  app.py  auth.py  realtime.py  schemas.py  services.py
src/dta_abrechnung/persistence/: __init__.py  base.py  models.py  postgres.py  repositories.py  session.py  uow.py
tests/: test_api.py  test_object_storage.py  test_persistence_sqlite.py  test_platform.py  test_runtime_profiles.py
