[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dta-abrechnung"
version = "0.1.1"
description = "National DTA billing platform scaffold for SGB V and SGB XI"
requires-python = ">=3.12"
dependencies = [
    "SQLAlchemy>=2,<3",
    "psycopg[binary]>=3,<4",
    "alembic>=1.13,<2",
    "fastapi>=0.135,<0.136",
    "uvicorn>=0.44,<0.45",
    "httpx>=0.28,<0.29",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
